# multifocal-stitching

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: CI.yml
gradio/: app.py
src/multifocal_stitching/: __init__.py  __main__.py  merge_imgs.py  stitching.py  utils.py
tests/: test_stitching.py
